syntax = "proto3";

package micro.user.v1;

// import "shared/proto/common/common.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "third_party/proto/validate/validate.proto";
import "third_party/proto/protoc-gen-gorm/options/gorm.proto";
// import "third_party/proto/protoc-gen-gorm/types/types.proto";

option go_package = "github.com/xmlking/micro-starter-kit/srv/account/proto/user";
option java_multiple_files = true;
option java_package = "micro.user.v1";

// Ref:
// https://github.com/seizadi/atlas-template/blob/master/resolved/pkg/pb/cmdb.proto

// User Service
service UserService {
  rpc Exist(ExistRequest) returns (ExistResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// FIXME: https://github.com/envoyproxy/protoc-gen-validate/issues/223
// with Workaround in .override.go
message ExistRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue username = 2 [ (validate.rules).string = {
    min_len : 4,
    max_len : 16,
    pattern : "^[a-z0-9_-]{3,15}$",
    max_bytes : 256,
  } ];
  google.protobuf.StringValue first_name = 3
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue last_name = 4
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue email = 5
      [ (validate.rules).string.email = true ]; // Not Working
}

message ExistResponse {
  option (validate.disabled) = true;
  bool result = 1;
}

message ListRequest {
  google.protobuf.UInt32Value limit = 1
      [ (validate.rules).uint32 = {gte : 1, lte : 100} ];
  google.protobuf.UInt32Value page = 2 [ (validate.rules).uint32.gte = 1 ];
  google.protobuf.StringValue sort = 3;
  google.protobuf.StringValue username = 4 [ (validate.rules).string = {
    min_len : 4,
    max_len : 16,
    pattern : "^[a-z0-9_-]{3,15}$",
    max_bytes : 256,
  } ];
  google.protobuf.StringValue first_name = 5
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue last_name = 6
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue email = 7
      [ (validate.rules).string.email = true ]; // Not Working
}

message ListResponse {
  option (validate.disabled) = true;
  repeated User results = 1;
  uint32 total = 2;
}

message GetRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue username = 2 [ (validate.rules).string = {
    min_len : 4,
    max_len : 16,
    pattern : "^[a-z0-9_-]{3,15}$",
    max_bytes : 256,
  } ];
  google.protobuf.StringValue first_name = 3
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue last_name = 4
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue email = 5
      [ (validate.rules).string.email = true ]; // Not Working
}

message GetResponse {
  option (validate.disabled) = true;
  User result = 1;
  // basic.Error error =2;
}

message CreateRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue username = 2 [ (validate.rules).string = {
    min_len : 4,
    max_len : 16,
    pattern : "^[a-z0-9_-]{3,15}$",
    max_bytes : 256,
  } ];
  google.protobuf.StringValue first_name = 3
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue last_name = 4
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue email = 5
      [ (validate.rules).string.email = true ]; // Not Working
}

message CreateResponse {
  option (validate.disabled) = true;
  User result = 1;
}

message UpdateRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue username = 2 [ (validate.rules).string = {
    min_len : 4,
    max_len : 16,
    pattern : "^[a-z0-9_-]{3,15}$",
    max_bytes : 256,
  } ];
  google.protobuf.StringValue first_name = 3
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue last_name = 4
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue email = 5
      [ (validate.rules).string.email = true ]; // Not Working
}

message UpdateResponse {
  option (validate.disabled) = true;
  User result = 1;
}

message DeleteRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue username = 2 [ (validate.rules).string = {
    min_len : 4,
    max_len : 16,
    pattern : "^[a-z0-9_-]{3,15}$",
    max_bytes : 256,
  } ];
  google.protobuf.StringValue first_name = 3
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue last_name = 4
      [ (validate.rules).string.min_len = 3 ];
  google.protobuf.StringValue email = 5
      [ (validate.rules).string.email = true ]; // Not Working
}

message DeleteResponse {
  option (validate.disabled) = true;
  User result = 1;
}

// User Entity
message User {
  option (validate.disabled) = true;
  option (gorm.opts) = {
    ormable : true
  };

  // gorm.types.UUID id                      = 1  [(gorm.field).tag = { type:
  // "uuid", primary_key: true, not_null: true, unique: true }]; // primary key
  // string id                               = 1  [(gorm.field).tag = { type:
  // "uuid", primary_key: true, default: "uuid_generate_v4()" }]; // primary key

  // primary key
  string id = 1 [ (gorm.field).tag = {type : "uuid", primary_key : true} ];
  google.protobuf.Timestamp created_at = 2
      [ (gorm.field).tag = {not_null : true} ];
  google.protobuf.Timestamp updated_at = 3
      [ (gorm.field).tag = {not_null : true} ];
  google.protobuf.Timestamp deleted_at = 4
      [ (gorm.field).tag = {index : "idx_users_deleted_at"} ];
  string username = 7 [ (gorm.field).tag = {size : 100, not_null : true} ];
  string first_name = 8 [ (gorm.field).tag = {size : 255, not_null : true} ];
  string last_name = 9 [ (gorm.field).tag = {not_null : true} ];
  string email = 10 [ (gorm.field).tag = {not_null : true} ];
  Profile profile = 11;
}

// Profile Entity
message Profile {
  option (validate.disabled) = true;
  option (gorm.opts) = {
    ormable : true
  };

  // gorm.types.UUID id                      = 1  [(gorm.field).tag = { type:
  // "uuid", primary_key: true, not_null: true, unique: true }]; // primary key
  // string id                               = 1  [(gorm.field).tag = { type:
  // "uuid", primary_key: true, default: "uuid_generate_v4()" }]; // primary key
  string id = 1
      [ (gorm.field).tag = {type : "uuid", primary_key : true} ]; // primary key
  google.protobuf.Timestamp created_at = 2
      [ (gorm.field).tag = {not_null : true} ];
  google.protobuf.Timestamp updated_at = 3
      [ (gorm.field).tag = {not_null : true} ];
  google.protobuf.Timestamp deleted_at = 4
      [ (gorm.field).tag = {index : "idx_profiles_deleted_at"} ];
  string tz = 5; // *time.Location?
  string avatar = 6;
  // FIXME: https://github.com/jinzhu/gorm/issues/1978
  string gender = 7; //    GenderType `gorm:"not null;type:ENUM('M', 'F')"`
  // GenderType gender                       = 7; //    GenderType `gorm:"not
  // null;type:ENUM('M', 'F')"`
  google.protobuf.Timestamp birthday = 8
      [ (gorm.field).tag = {not_null : true} ];
  uint32 age = 9 [ (gorm.field).drop = true ]; // synthetic field
}
